# specdrift

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  specdrift-project-spec.md  specdrift.yaml
.github/workflows/: dashboard-pages.yml  specdrift-pr-check.yml  specdrift-sync.yml  tests.yml
dashboard/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/public/: drift-report.json
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/layout/: AppLayout.tsx
dashboard/src/components/sections/: SectionDetailPanel.tsx
dashboard/src/components/ui/: HealthBar.tsx  HealthPill.tsx
dashboard/src/hooks/: useDriftReport.ts
dashboard/src/lib/: report.ts  types.ts
dashboard/src/pages/: DriftFeedPage.tsx  OverviewPage.tsx  PrdTreePage.tsx
docs/: PRD-TEMPLATE.md
specdrift/: cli.py  config.py  store.py
specdrift/alerts/: __init__.py  slack.py
specdrift/cli/: init.py  main.py
specdrift/detector/: detector.py  report.py
specdrift/gh_linker/: __init__.py  gh_linker.py  pr_bot.py
specdrift/jira_linker/: __init__.py  jira_linker.py
specdrift/parser/: __init__.py  gdocs.py
tests/: test_config.py  test_detector.py  test_gh_linker.py  test_init.py  test_jira_linker.py  test_parser.py  test_pr_bot.py  test_slack.py  test_store.py
